[tool.poetry]
name = "projecteweb2023-1"
version = "0.1.0"
description = ""
authors = ["quiracle <jsalattorres@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.14"
bs4 = "^0.0.1"
xmltodict = "^0.13.0"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
